--- a/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-contacto.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-contacto.xhtml
@@ -11,51 +11,51 @@
         <h:panelGrid columns="3" columnClasses="label, value" >
 
             <h:outputText value="Nombre de contacto: *" styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtNombreContacto" value="#{MbFormGrupoEmpresa.identificacionSeleccionada.nombreContacto}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Nombre es requerido."/>
+            <p:inputText id="txtNombreContacto" value="#{MbFormGrupoEmpresa.identificacionSeleccionada.nombreContacto}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Nombre es requerido."  label ="Nombre de contacto" maxlength="100"/>
             <p:message for="txtNombreContacto"/>
 
             <h:outputText value="Cargo de contacto: *" styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtCargoContacto" value="#{MbFormGrupoEmpresa.identificacionSeleccionada.cargoContacto}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Cargo es requerido."/>
+            <p:inputText id="txtCargoContacto" value="#{MbFormGrupoEmpresa.identificacionSeleccionada.cargoContacto}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Cargo es requerido." label ="Cargo de contacto" maxlength="60"/>
             <p:message for="txtCargoContacto"/>
 
             <h:outputText value="Teléfono contacto: *" styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtTelefonoContacto" value="#{MbFormGrupoEmpresa.identificacionSeleccionada.telefonoContacto}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Teléfono es requerido."/>
+            <p:inputText id="txtTelefonoContacto" value="#{MbFormGrupoEmpresa.identificacionSeleccionada.telefonoContacto}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Teléfono es requerido." label ="Teléfono contacto" maxlength="100"/>
             <p:message for="txtTelefonoContacto"/>
 
             <h:outputText value="Correo electrónico de contacto: *" styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtCorreoContacto" value="#{MbFormGrupoEmpresa.identificacionSeleccionada.mailContacto}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Correo es requerido."/>
+            <p:inputText id="txtCorreoContacto" value="#{MbFormGrupoEmpresa.identificacionSeleccionada.mailContacto}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Correo es requerido." label ="Correo electrónico de contacto" maxlength="100"/>
             <p:message for="txtCorreoContacto"/>
 
             <h:outputText value="Nombre de contacto 2: " styleClass="etiquetaFormulario"/>
-            <p:inputText value="#{MbFormGrupoEmpresa.identificacionSeleccionada.nombreContacto2}" styleClass="valorEtiquetaFormulario"/>
+            <p:inputText value="#{MbFormGrupoEmpresa.identificacionSeleccionada.nombreContacto2}" styleClass="valorEtiquetaFormulario" label ="Nombre de contacto 2" maxlength="60"/>
             <p:spacer/>
 
             <h:outputText value="Cargo de contacto 2: " styleClass="etiquetaFormulario"/>
-            <p:inputText value="#{MbFormGrupoEmpresa.identificacionSeleccionada.cargoContacto2}" styleClass="valorEtiquetaFormulario"/>
+            <p:inputText value="#{MbFormGrupoEmpresa.identificacionSeleccionada.cargoContacto2}" styleClass="valorEtiquetaFormulario" label ="Cargo de contacto 2" maxlength="60"/>
             <p:spacer/>
 
             <h:outputText value="Teléfono de contacto 2: " styleClass="etiquetaFormulario"/>
-            <p:inputText value="#{MbFormGrupoEmpresa.identificacionSeleccionada.telefonoContacto2}" styleClass="valorEtiquetaFormulario"/>
+            <p:inputText value="#{MbFormGrupoEmpresa.identificacionSeleccionada.telefonoContacto2}" styleClass="valorEtiquetaFormulario" label ="Teléfono contacto 2" maxlength="100"/>
             <p:spacer/>
 
             <h:outputText value="Correo electrónico de contacto 2: " styleClass="etiquetaFormulario"/>
-            <p:inputText value="#{MbFormGrupoEmpresa.identificacionSeleccionada.mailContacto2}" styleClass="valorEtiquetaFormulario"/>
+            <p:inputText value="#{MbFormGrupoEmpresa.identificacionSeleccionada.mailContacto2}" styleClass="valorEtiquetaFormulario" label ="Correo electrónico de contacto 2" maxlength="80"/>
             <p:spacer/>
 
             <h:outputText value="Nombre de contacto 3: " styleClass="etiquetaFormulario"/>
-            <p:inputText value="#{MbFormGrupoEmpresa.identificacionSeleccionada.nombreContacto3}" styleClass="valorEtiquetaFormulario"/>
+            <p:inputText value="#{MbFormGrupoEmpresa.identificacionSeleccionada.nombreContacto3}" styleClass="valorEtiquetaFormulario" label ="Nombre de contacto 3" maxlength="60"/>
             <p:spacer/>
 
             <h:outputText value="Cargo de contacto 3: " styleClass="etiquetaFormulario"/>
-            <p:inputText value="#{MbFormGrupoEmpresa.identificacionSeleccionada.cargoContacto3}" styleClass="valorEtiquetaFormulario"/>
+            <p:inputText value="#{MbFormGrupoEmpresa.identificacionSeleccionada.cargoContacto3}" styleClass="valorEtiquetaFormulario" label ="Cargo de contacto 3" maxlength="60"/>
             <p:spacer/>
 
             <h:outputText value="Teléfono de contacto 3: " styleClass="etiquetaFormulario"/>
-            <p:inputText value="#{MbFormGrupoEmpresa.identificacionSeleccionada.telefonoContacto3}" styleClass="valorEtiquetaFormulario"/>
+            <p:inputText value="#{MbFormGrupoEmpresa.identificacionSeleccionada.telefonoContacto3}" styleClass="valorEtiquetaFormulario" label ="Teléfono contacto 3" maxlength="100"/>
             <p:spacer/>
 
             <h:outputText value="Correo electrónico de contacto 3: " styleClass="etiquetaFormulario"/>
-            <p:inputText value="#{MbFormGrupoEmpresa.identificacionSeleccionada.mailContacto3}" styleClass="valorEtiquetaFormulario"/>
+            <p:inputText value="#{MbFormGrupoEmpresa.identificacionSeleccionada.mailContacto3}" styleClass="valorEtiquetaFormulario" label ="Correo electrónico de contacto 2" maxlength="80"/>
             <p:spacer/>
 
             <!--h:outputText value="Saltar siguiente: " />
