--- a/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-tamano.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-tamano.xhtml
@@ -15,39 +15,39 @@
             <p:calendar locale="de" navigator="true" pattern="dd/MM/yyyy" styleClass="valorEtiquetaFormulario"/>
             -->    
             <p:outputLabel value="Personal ocupado: *" styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtPersonalOcupado" value="#{MbFormEstablecimiento.tamanoSeleccionado.personalOcupado}"  styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Personal ocupado es requerido."/>
+            <p:inputText id="txtPersonalOcupado" value="#{MbFormEstablecimiento.tamanoSeleccionado.personalOcupado}"  styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Personal ocupado es requerido." label="Personal ocupado"/>
             <p:message for="txtPersonalOcupado" />
 
             <p:outputLabel value="Personal empleado: *" styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtPersonalEmpleado" value="#{MbFormEstablecimiento.tamanoSeleccionado.personalEmpleado}"  styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Personal empleado es requerido."/>
+            <p:inputText id="txtPersonalEmpleado" value="#{MbFormEstablecimiento.tamanoSeleccionado.personalEmpleado}"  styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Personal empleado es requerido." label="Personal empleado"/>
             <p:message for="txtPersonalEmpleado" />
 
             <p:outputLabel value="Personal temporal: *" styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtPersoTemporal" value="#{MbFormEstablecimiento.tamanoSeleccionado.personalTemporal}"  styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Personal temporal es requerido."/>
+            <p:inputText id="txtPersoTemporal" value="#{MbFormEstablecimiento.tamanoSeleccionado.personalTemporal}"  styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Personal temporal es requerido." label="Personal temporal"/>
             <p:message for="txtPersoTemporal" />
 
             <p:outputLabel value="Hombres ocupados: " styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtNumeroHombres" value="#{MbFormEstablecimiento.tamanoSeleccionado.hombresOcupados}"  styleClass="valorEtiquetaFormulario" required="true" requiredMessage="Los Hombres ocupados son requeridos."/>
+            <p:inputText id="txtNumeroHombres" value="#{MbFormEstablecimiento.tamanoSeleccionado.hombresOcupados}"  styleClass="valorEtiquetaFormulario" required="true" requiredMessage="Los Hombres ocupados son requeridos." label="Hombres ocupados"/>
             <p:message for="txtNumeroHombres" />
 
             <p:outputLabel value="Mujeres ocupadas: " styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtNumeroMujeres" value="#{MbFormEstablecimiento.tamanoSeleccionado.mujeresOcupadas}"  styleClass="valorEtiquetaFormulario" required="true" requiredMessage="Las Mujeres ocupadas son requeridos."/>
+            <p:inputText id="txtNumeroMujeres" value="#{MbFormEstablecimiento.tamanoSeleccionado.mujeresOcupadas}"  styleClass="valorEtiquetaFormulario" required="true" requiredMessage="Las Mujeres ocupadas son requeridos." label="Mujeres ocupadas"/>
             <p:message for="txtNumeroMujeres" />
 
             <p:outputLabel value="Activos: *" styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtActivo" value="#{MbFormEstablecimiento.tamanoSeleccionado.activo}"  styleClass="valorEtiquetaFormulario" required="true" requiredMessage="Los Activos son requeridos."/>
+            <p:inputText id="txtActivo" value="#{MbFormEstablecimiento.tamanoSeleccionado.activo}"  styleClass="valorEtiquetaFormulario" required="true" requiredMessage="Los Activos son requeridos." label="Activos"/>
             <p:message for="txtActivo" />
 
             <p:outputLabel value="Ingresos operacionales: *" styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtIngresosOperacionales" value="#{MbFormEstablecimiento.tamanoSeleccionado.ingresosOperacionales}"  styleClass="valorEtiquetaFormulario" required="true" requiredMessage="Los Ingresos operacionales son requeridos."/>
+            <p:inputText id="txtIngresosOperacionales" value="#{MbFormEstablecimiento.tamanoSeleccionado.ingresosOperacionales}"  styleClass="valorEtiquetaFormulario" required="true" requiredMessage="Los Ingresos operacionales son requeridos." label="Ingresos operacionales"/>
             <p:message for="txtIngresosOperacionales" />
 
             <p:outputLabel value="Costo de ventas: *" styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtCostoVentas" value="#{MbFormEstablecimiento.tamanoSeleccionado.costoVentasEst}"  styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Costo de ventas es requerido."/>
+            <p:inputText id="txtCostoVentas" value="#{MbFormEstablecimiento.tamanoSeleccionado.costoVentasEst}"  styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Costo de ventas es requerido." label="Costo de ventas"/>
             <p:message for="txtCostoVentas" />
 
             <p:outputLabel value="Gastos operacionales: *" styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtGastosOperacionales" value="#{MbFormEstablecimiento.tamanoSeleccionado.gastosOperacionales}"  styleClass="valorEtiquetaFormulario" required="true" requiredMessage="Los Gastos operacionales son requerido."/>
+            <p:inputText id="txtGastosOperacionales" value="#{MbFormEstablecimiento.tamanoSeleccionado.gastosOperacionales}"  styleClass="valorEtiquetaFormulario" required="true" requiredMessage="Los Gastos operacionales son requerido." label="Gastos operacionales"/>
             <p:message for="txtGastosOperacionales" />
 
         </h:panelGrid>
