--- a/GrupoEmpresarial-war/web/interfaz/unidad-legal/componente/cpt-formulario-relacion.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/unidad-legal/componente/cpt-formulario-relacion.xhtml
@@ -28,7 +28,7 @@
             <p:message for="cboTipoRelacion" />
 
             <p:outputLabel value="NIT de la controlante: *" styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtNitControlante" value="#{MbFormUnidadLegal.relacionSeleccionada.nitControlante}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El NIT de la controlante es requerido."/>
+            <p:inputText id="txtNitControlante" value="#{MbFormUnidadLegal.relacionSeleccionada.nitControlante}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El NIT de la controlante es requerido." label="NIT de la controlante"/>
             <p:message for="txtNitControlante" />
 
             <!--p:outputLabel value="Dígito de verificación: *" styleClass="etiquetaFormulario"/>
@@ -36,11 +36,11 @@
             <p:message for="txtDigitoVerificacion" /-->
 
             <p:outputLabel value="Nombre de la controlante: *" styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtNombreControlante" value="#{MbFormUnidadLegal.relacionSeleccionada.nombreControlante}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Nombre es requerido."/>
+            <p:inputText id="txtNombreControlante" value="#{MbFormUnidadLegal.relacionSeleccionada.nombreControlante}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Nombre es requerido." maxlength="150" label="Nombre de la controlante"/>
             <p:message for="txtNombreControlante" />
 
             <p:outputLabel value="Porcentaje de participación de la controlante directa: *" styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtPorcentajeParticipacionControlanteDirecta"  value="#{MbFormUnidadLegal.relacionSeleccionada.porcentajeControlanteul}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Porcentaje de participación es requerido."/>
+            <p:inputText id="txtPorcentajeParticipacionControlanteDirecta"  value="#{MbFormUnidadLegal.relacionSeleccionada.porcentajeControlanteul}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Porcentaje de participación es requerido." maxlength="20" label="Porcentaje de participación"/>
             <p:message for="txtPorcentajeParticipacionControlanteDirecta" />
 
             <!--h:outputText value="Saltar siguiente: " />
